Added course assignment to faculty by admin