@@ -1,156 +1,193 @@
 /**
  *  File: AFacultyManagementController.java
- *  Description: This class is used for the controlling the flow of the
- *  Admin FacultyManagement Window for the application, we use "@FXML" because these are event handles that
- *  were defined in the FXML file. Helping Route through windows for a seemingless experience
+ *  Description: This controller manages faculty data within the admin panel,
+ *  including adding, editing, and deleting faculty members as well as viewing details.
+ *  Author: Huzaifa A. & Group
  *  Date: March 2nd, 2025
- *  */
-
+ */
 
 package GUI.CompanyLogin;
 
-//Important Statement
-import javafx.fxml.FXML;
 import Backend.Faculty;
-import javafx.scene.control.TableColumn;
-import javafx.scene.control.TableView;
-import javafx.scene.control.TextField;
-import javafx.scene.control.Alert;
-import javafx.scene.control.Alert.AlertType;
-import javafx.scene.control.cell.PropertyValueFactory;
-import java.util.Arrays;
+import javafx.beans.property.SimpleStringProperty;
+import javafx.fxml.FXML;
+import javafx.fxml.FXMLLoader;
+import javafx.scene.Parent;
+import javafx.scene.Scene;
+import javafx.scene.control.*;
+import javafx.scene.image.Image;
+import javafx.stage.Stage;
+
+import java.io.IOException;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.stream.Collectors;
 
+public class AFacultyManagementController {
 
-public class AFacultyManagementController extends ASubjectManagementController {
+    @FXML private TextField facultyNameField, facultyEmailField, facultyDegreeField, facultyOfficeField,
+            facultyResearchField, facultyCoursesField;
 
-    //Method to switch window to dashboard
-    @FXML
-    private void loadDashboard() {
-        Router.navigate("ADashboard.fxml", "Admin Dashboard");
-    }
-
-    //textbox
-    @FXML private TextField facultyNameField;
-    @FXML private TextField facultyEmailField;
-    @FXML private TextField facultyDegreeField;
-    @FXML private TextField facultyOfficeField;
-    @FXML private TextField facultyResearchField;
-    @FXML private TextField facultyCoursesField;
     @FXML private TableView<Faculty> facultyTable;
-    @FXML private TableColumn<Faculty, String> colFacultyName;
-    @FXML private TableColumn<Faculty, String> colFacultyEmail;
-    @FXML private TableColumn<Faculty, String> colFacultyDegree;
-    @FXML private TableColumn<Faculty, String> colFacultyCourses;
+    @FXML private TableColumn<Faculty, String> colFacultyID, colFacultyName, colFacultyEmail, colFacultyDegree,
+            colFacultyResearch, colFacultyOffice;
 
+    private Faculty selectedFaculty;
 
-    @FXML
-    public void initialize() {
-        colFacultyName.setCellValueFactory(new PropertyValueFactory<>("name"));  // Looks for getName()
-        colFacultyEmail.setCellValueFactory(new PropertyValueFactory<>("email"));  // Looks for getEmail()
-        colFacultyDegree.setCellValueFactory(new PropertyValueFactory<>("degree"));  // Looks for getDegree()
-        colFacultyCourses.setCellValueFactory(new PropertyValueFactory<>("coursesAsString"));  // Looks for getCoursesAsString()
+    // Static list of sample faculty members
+    private static final List<Faculty> facultyList = new ArrayList<>();
 
-        loadFacultyTable();
+    // Initialize sample data
+    static {
+        facultyList.add(new Faculty("F0001", "Dr. Alan Turing", null, "Ph.D.",
+                "Computational Theory", List.of("CS101"), "turing@university.edu", "Room 201"));
+        facultyList.add(new Faculty("F0002", "Prof. Emily Brontë",null, "Master's",
+                "English Literature", List.of("ENG101"), "bronte@university.edu", "Room 202"));
+        facultyList.add(new Faculty("F0003", "Dr. Grace Hopper", null, "Ph.D.",
+                "Computer Programming", List.of("CS201"), "hopper@university.edu", "Lab 203"));
+        facultyList.add(new Faculty("F0004", "Dr. Lakyn Copeland", null, "Master's",
+                "English Literature", List.of("ENG102"), "copeland@university.edu", "Room 201"));
+        facultyList.add(new Faculty("F0005", "Albozr Gharabaghi", null, "Ph.D.",
+                "Water and Soil", List.of("ENGG402"), "gharabaghi@university.edu", "Lab 202"));
     }
 
-
-
+    // Initializes the table and selection listeners
     @FXML
-    private void loadFacultyTable() {
-        facultyTable.getItems().clear();
-        facultyTable.getItems().addAll(Faculty.getAllFaculty());
-        facultyTable.refresh();
+    private void initialize() {
+        colFacultyID.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getFacultyID()));
+        colFacultyName.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getName()));
+        colFacultyEmail.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getEmail()));
+        colFacultyDegree.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getDegree()));
+        colFacultyResearch.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getResearchInterest()));
+        colFacultyOffice.setCellValueFactory(data -> new SimpleStringProperty(data.getValue().getOfficeLocation()));
+
+        facultyTable.getItems().setAll(facultyList);
+
+        facultyTable.getSelectionModel().selectedItemProperty().addListener((obs, oldVal, newVal) -> {
+            selectedFaculty = newVal;
+            if (newVal != null) fillFormWithFaculty(newVal);
+        });
     }
 
+    // Populates form fields with selected faculty data
+    private void fillFormWithFaculty(Faculty faculty) {
+        facultyNameField.setText(faculty.getName());
+        facultyEmailField.setText(faculty.getEmail());
+        facultyDegreeField.setText(faculty.getDegree());
+        facultyOfficeField.setText(faculty.getOfficeLocation());
+        facultyResearchField.setText(faculty.getResearchInterest());
+        facultyCoursesField.setText(String.join(", ", faculty.getCoursesOffered()));
+    }
 
-
-    //Add faculty button clicked
-    @FXML
-    private void addFaculty() {
-
-        System.out.println("Add Faculty clicked");
-        String facultyName = facultyNameField.getText();
-        String facultyEmail = facultyEmailField.getText();
-        String facultyDegree = facultyDegreeField.getText();
-        String facultyOffice = facultyOfficeField.getText();
-        String facultyResearchInterest = facultyResearchField.getText();
-        String facultyCoursesAssigned = facultyCoursesField.getText();
-        if (facultyName.isEmpty()) {
-            System.out.println("Error: Faculty name is required!");
-            return; // Stop execution if the field is empty
-        }
-        else if (facultyEmail.isEmpty()) {
-            System.out.println("Error: Faculty email is required!");
-            return; // Stop execution if the field is empty
-        }
-        else if (facultyDegree.isEmpty()) {
-            System.out.println("Error: Faculty degree is required!");
-            return; // Stop execution if the field is empty
-        }
-        else if (facultyOffice.isEmpty()) {
-            System.out.println("Error: Faculty office is required!");
-            return; // Stop execution if the field is empty
-        }
-        else if (facultyResearchInterest.isEmpty()) {
-            System.out.println("Error: Faculty research interest is required!");
-            return; // Stop execution if the field is empty
-        }
-        else if (facultyCoursesAssigned.isEmpty()) {
-            System.out.println("Error: Faculty course assigned is required!");
-            return; // Stop execution if the field is empty
-        }
-
-        List<String> facultyCourses = Arrays.asList(facultyCoursesAssigned.split("\\s*,\\s*"));  // Splits input by comma
-        Faculty newFaculty = new Faculty(facultyName, null, facultyDegree, facultyResearchInterest, facultyCourses, facultyEmail, facultyOffice);
+    // Adds a new faculty to the list
+    @FXML private void addFaculty() {
+        String id = "F" + String.format("%04d", facultyList.size() + 1);
+        Faculty newFaculty = new Faculty(
+                id,
+                facultyNameField.getText(),
+                null,
+                facultyDegreeField.getText(),
+                facultyResearchField.getText(),
+                List.of(facultyCoursesField.getText().split(",\\s*")),
+                facultyEmailField.getText(),
+                facultyOfficeField.getText()
+        );
         Faculty.addFaculty(newFaculty);
-        loadFacultyTable();
+        refreshFacultyTable();
+        clearForm();
+    }
 
-        // show that it worked, not sure if we want to do it a differet way?
-        Alert alert = new Alert(AlertType.INFORMATION);
-        alert.setTitle("Success");
-        alert.setHeaderText(null);
-        alert.setContentText("Faculty added successfully!");
-        alert.showAndWait();
+    // Edits selected faculty member's details
+    @FXML private void editFaculty() {
+        if (selectedFaculty != null) {
+            selectedFaculty.setName(facultyNameField.getText());
+            selectedFaculty.setEmail(facultyEmailField.getText());
+            selectedFaculty.setDegree(facultyDegreeField.getText());
+            selectedFaculty.setOfficeLocation(facultyOfficeField.getText());
+            selectedFaculty.setResearchInterest(facultyResearchField.getText());
+            selectedFaculty.setCoursesOffered(List.of(facultyCoursesField.getText().split(",\\s*")));
+            refreshFacultyTable();
+            clearForm();
+        }
+    }
 
-        //clears textbox after succesfully adds info
+    // Deletes selected faculty member
+    @FXML private void deleteFaculty() {
+        if (selectedFaculty != null) {
+            Faculty.removeFaculty(selectedFaculty.getFacultyID());
+            refreshFacultyTable();
+            clearForm();
+        }
+    }
+
+    // Refreshes the table view with the latest faculty list
+    private void refreshFacultyTable() {
+        facultyTable.getItems().setAll(Faculty.getFacultyList());
+    }
+
+    // Clears input form fields
+    private void clearForm() {
         facultyNameField.clear();
         facultyEmailField.clear();
         facultyDegreeField.clear();
         facultyOfficeField.clear();
         facultyResearchField.clear();
         facultyCoursesField.clear();
+        selectedFaculty = null;
     }
 
-    //Edit faculty button clicked
+    //takes you to new fxml file
     @FXML
-    private void editFaculty() {
-        System.out.println("Edit Faculty clicked");
-    }
+    private void assignCourses() {
+        if (selectedFaculty == null) {
+            Alert alert = new Alert(Alert.AlertType.ERROR, "Please select a faculty member first.");
+            alert.showAndWait();
+            return;
+        }
 
-    //Delete faculty button clicked
-    @FXML
-    private void deleteFaculty() {
-        Faculty selectedFaculty = facultyTable.getSelectionModel().getSelectedItem();
+        try {
+            FXMLLoader loader = new FXMLLoader(getClass().getResource("AAssignCourses.fxml"));
+            Parent root = loader.load();
 
-        if (selectedFaculty != null) {
-            facultyTable.getItems().remove(selectedFaculty);
-            facultyTable.refresh();
-            System.out.println("Deleted: " + selectedFaculty.getName());
-        } else {
-            System.out.println("No faculty selected!");
+            AAssignCoursesController controller = loader.getController();
+            controller.setFaculty(selectedFaculty);
+
+            Stage stage = new Stage();
+            stage.setTitle("Assign Courses");
+            stage.setScene(new Scene(root));
+            stage.show();
+
+        } catch (IOException e) {
+            e.printStackTrace();
+            Alert alert = new Alert(Alert.AlertType.ERROR, "Failed to load Assign Courses screen.");
+            alert.showAndWait();
         }
     }
 
 
-    //View faculty button clicked
-    @FXML
-    private void viewFacultyProfile() {
-        System.out.println("View Faculty Profile clicked");
+
+    // Navigation methods
+    @FXML private void loadDashboard() {
+        Router.navigate("ADashboard.fxml", "Admin Dashboard");
     }
-    //Assign faculty a course button clicked
-    @FXML
-    private void assignCourses() {
-        System.out.println("Assign Courses clicked");
+
+    @FXML private void loadSubjectManagement() {
+        Router.navigate("ASubjectManagement.fxml", "Subject Management");
+    }
+
+    @FXML private void loadCourseManagement() {
+        Router.navigate("ACourseManagement.fxml", "Course Management");
+    }
+
+    @FXML private void loadStudentManagement() {
+        Router.navigate("AStudentManagement.fxml", "Student Management");
+    }
+
+    @FXML private void loadFacultyManagement() {
+        Router.navigate("AFacultyManagement.fxml", "Faculty Management");
+    }
+
+    @FXML private void loadEventManagement() {
+        Router.navigate("AEventManagement.fxml", "Event Management");
     }
 }
